@@ -35,6 +35,8 @@ unity (7.4.0+16.04.20160526.1-0ubuntu2) UNRELEASED; urgency=medium
     bindings (LP: #1438754)
   * LockScreenAcceleratorController: check if a setting key is available
     instead of crashing
+  * ApplicationLauncherIcon: ensure quirks are properly set on icon
+    initialization
 
  -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Wed, 29 Jun 2016 18:06:42 +0200
 
